complete change logo and product name

--- a/404.html
+++ b/404.html
@@ -67,7 +67,7 @@
             </div>
             <div class="mt-12 flex justify-center">
                 <div class="relative group cursor-pointer overflow-hidden w-full max-w-2xl">
-                    <img src="images/2022-highlights-Large-uai-864x1080.png" 
+                    <img src="images/3D.png" 
                          alt="404 Illustration" 
                          class="w-full h-[400px] object-cover rounded-lg shadow-lg opacity-50">
                     <div class="absolute inset-0 flex items-center justify-center">
