--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About - Mohit Bhoite Portfolio</title>
+    <title>About - 3Dpros iOT Portfolio</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -66,21 +66,15 @@
                     <div class="w-full md:w-1/3">
                         <div class="sticky top-32">
                             <div class="aspect-square rounded-2xl overflow-hidden shadow-lg bg-white dark:bg-gray-800 p-3">
-                                <img src="https://placehold.co/600x600" alt="Mohit Bhoite" class="w-full h-full object-cover rounded-xl">
+                                <img src="images/3D.png" alt="3Dpros iOT" class="w-full h-full object-cover rounded-xl">
                             </div>
                             <!-- Social Links -->
                             <div class="flex justify-center space-x-6 mt-6">
                                 <a href="#" class="text-gray-600 dark:text-gray-400 hover:text-primary-600 dark:hover:text-primary-400 transition-colors">
-                                    <i class="fab fa-twitter text-xl"></i>
+                                    <img src="images/shopee.svg" alt="shopee" class="w-7 h-7">
                                 </a>
                                 <a href="#" class="text-gray-600 dark:text-gray-400 hover:text-primary-600 dark:hover:text-primary-400 transition-colors">
-                                    <i class="fab fa-instagram text-xl"></i>
-                                </a>
-                                <a href="#" class="text-gray-600 dark:text-gray-400 hover:text-primary-600 dark:hover:text-primary-400 transition-colors">
-                                    <i class="fab fa-github text-xl"></i>
-                                </a>
-                                <a href="#" class="text-gray-600 dark:text-gray-400 hover:text-primary-600 dark:hover:text-primary-400 transition-colors">
-                                    <i class="fab fa-linkedin text-xl"></i>
+                                    <img src="images/tiktok.svg" alt="tiktok" class="w-7 h-7">
                                 </a>
                             </div>
                         </div>
@@ -90,7 +84,7 @@
                     <div class="w-full md:w-2/3">
                         <div class="prose prose-lg dark:prose-invert">
                             <p class="mb-6">
-                                Hi, I'm Mohit Bhoite. I create sculptural electronic objects that celebrate both form and function. My work explores the intersection of art and technology, where circuits become visual elements and electronic components transform into artistic media.
+                                Hi, I'm 3Dpros iOT. I create sculptural electronic objects that celebrate both form and function. My work explores the intersection of art and technology, where circuits become visual elements and electronic components transform into artistic media.
                             </p>
                             <p class="mb-6">
                                 Each piece is carefully crafted using brass rods, electronic components, and various materials, creating three-dimensional circuit sculptures that are both functional and aesthetically pleasing. The exposed nature of these circuits allows viewers to appreciate the beauty of electronic design while understanding its functionality.
@@ -113,7 +107,7 @@
                             <!-- Contact Section -->
                             <h2 class="text-2xl font-display font-semibold text-gray-900 dark:text-white mb-4">Get in Touch</h2>
                             <p class="text-gray-600 dark:text-gray-400">
-                                Interested in commissioning a piece or collaborating on a project? Feel free to reach out through any of my social media channels or send me an email at <a href="mailto:contact@example.com" class="text-primary-600 dark:text-primary-400 hover:underline">contact@example.com</a>.
+                                Interested in commissioning a piece or collaborating on a project? Feel free to reach out through any of my social media channels or send me an email at <a href="mailto:iot7pros@gmail.com" class="text-primary-600 dark:text-primary-400 hover:underline">iot7pros@gmail.com</a>.
                             </p>
                         </div>
                     </div>
