update some image and translate from english to vietnamese in about page

--- a/about.html
+++ b/about.html
@@ -84,13 +84,13 @@
                     <div class="w-full md:w-2/3">
                         <div class="prose prose-lg dark:prose-invert">
                             <p class="mb-6">
-                                Hi, I'm 3Dpros iOT. I create sculptural electronic objects that celebrate both form and function. My work explores the intersection of art and technology, where circuits become visual elements and electronic components transform into artistic media.
+                                Xin chào, tôi là 3Dpros iOT – người tạo ra những tác phẩm điêu khắc điện tử độc đáo, nơi vẻ đẹp hình thể hòa quyện hoàn hảo với công năng! Các sáng tạo của tôi là sự giao thoa giữa nghệ thuật và công nghệ, biến những mạch điện thành yếu tố thị giác đầy cuốn hút và các linh kiện điện tử thành chất liệu nghệ thuật đỉnh cao.
                             </p>
                             <p class="mb-6">
-                                Each piece is carefully crafted using brass rods, electronic components, and various materials, creating three-dimensional circuit sculptures that are both functional and aesthetically pleasing. The exposed nature of these circuits allows viewers to appreciate the beauty of electronic design while understanding its functionality.
+                                Mỗi tác phẩm đều được chế tác tỉ mỉ từ thanh đồng thau, linh kiện điện tử và nhiều vật liệu đa dạng, tạo nên những bức điêu khắc mạch điện ba chiều không chỉ hoạt động hoàn hảo mà còn đẹp mắt đến từng chi tiết. Thiết kế để lộ mạch điện giúp quý khách vừa chiêm ngưỡng vẻ đẹp của công nghệ, vừa hiểu rõ cách nó vận hành – một trải nghiệm không thể bỏ lỡ!
                             </p>
                             <p class="mb-8">
-                                When I'm not building sculptures, I'm experimenting with new techniques, teaching workshops, or collaborating with other artists in the electronic art community.
+                                Khi không đắm chìm trong việc chế tác, tôi luôn thử nghiệm các kỹ thuật mới, tổ chức workshop truyền cảm hứng hoặc hợp tác cùng những nghệ sĩ tài hoa trong cộng đồng nghệ thuật điện tử. Hãy để tôi mang đến cho bạn một hành trình nghệ thuật công nghệ đầy ấn tượng!
                             </p>
 
                             <!-- Skills Section -->
@@ -107,7 +107,7 @@
                             <!-- Contact Section -->
                             <h2 class="text-2xl font-display font-semibold text-gray-900 dark:text-white mb-4">Get in Touch</h2>
                             <p class="text-gray-600 dark:text-gray-400">
-                                Interested in commissioning a piece or collaborating on a project? Feel free to reach out through any of my social media channels or send me an email at <a href="mailto:iot7pros@gmail.com" class="text-primary-600 dark:text-primary-400 hover:underline">iot7pros@gmail.com</a>.
+                                Quý khách muốn đặt làm một tác phẩm riêng biệt hoặc cùng hợp tác trong một dự án đầy thú vị? Hãy thoải mái liên hệ với tôi qua bất kỳ kênh mạng xã hội nào hoặc gửi email trực tiếp đến <a href="mailto:iot7pros@gmail.com" class="text-primary-600 dark:text-primary-400 hover:underline">iot7pros@gmail.com</a>. Tôi luôn sẵn lòng đồng hành để biến ý tưởng của bạn thành hiện thực!
                             </p>
                         </div>
                     </div>
