--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div class="grid md:grid-cols-2 gap-8">
                 <!-- Left Image -->
                 <div class="relative group cursor-pointer overflow-hidden">
-                    <img src="images\2022-highlights-Large-uai-864x1080.png" 
+                    <img src="images/art_lamp/art lamp yellow.jpg" 
                          alt="LED Circuit Board with Purple Light" 
                          class="w-full h-[400px] object-cover rounded-lg shadow-lg transition-transform duration-500 group-hover:scale-110">
                     <div class="absolute bottom-4 left-1/2 -translate-x-1/2 bg-white/90 dark:bg-gray-800/90 backdrop-blur-sm px-8 py-3 rounded-full shadow-lg transition-all duration-500 group-hover:opacity-0 group-hover:translate-y-full">
@@ -69,7 +69,7 @@
                 </div>
                 <!-- Right Image -->
                 <div class="relative group cursor-pointer overflow-hidden">
-                    <img src="images\lightbar-header-uai-533x667.png" 
+                    <img src="images/gonggi/gonggi.jpg" 
                          alt="Collection of Electronic Art Projects" 
                          class="w-full h-[400px] object-cover rounded-lg shadow-lg transition-transform duration-500 group-hover:scale-110">
                     <div class="absolute bottom-4 left-1/2 -translate-x-1/2 bg-white/90 dark:bg-gray-800/90 backdrop-blur-sm px-8 py-3 rounded-full shadow-lg transition-all duration-500 group-hover:opacity-0 group-hover:translate-y-full">
