--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <!-- Font Awesome CDN for social icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <script>
@@ -42,8 +42,8 @@
                         },
                     },
                     fontFamily: {
-                        'display': ['"Playfair Display"', 'serif'],
-                        'body': ['Inter', 'sans-serif'],
+                        'display': ['Playfair Display', 'serif'],
+                        'body': ['Roboto', 'sans-serif'],
                     },
                 },
             },
