update text and images in projects (art lamp)

--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
     <main class="w-full py-12 bg-gray-50 dark:bg-gray-900 mt-24">
         <div class="max-w-[1320px] mx-auto px-4 sm:px-6 lg:px-8">
             <div class="max-w-4xl mx-auto">
-                <h1 class="text-4xl md:text-5xl font-display font-bold text-gray-900 dark:text-white mb-12 text-center">About Me</h1>
+                <h1 class="text-4xl md:text-5xl font-display font-bold text-gray-900 dark:text-white mb-12 text-center">Về tôi</h1>
                 
                 <!-- Profile Section -->
                 <div class="flex flex-col md:flex-row gap-12 items-start">
@@ -94,7 +94,7 @@
                             </p>
 
                             <!-- Skills Section -->
-                            <h2 class="text-2xl font-display font-semibold text-gray-900 dark:text-white mb-4">Skills & Expertise</h2>
+                            <h2 class="text-2xl font-display font-semibold text-gray-900 dark:text-white mb-4">Kỹ năng & Chuyên môn</h2>
                             <div class="flex flex-wrap gap-3 mb-8">
                                 <span class="px-4 py-2 bg-primary-100 dark:bg-primary-900/30 text-primary-800 dark:text-primary-300 rounded-full text-sm">Circuit Design</span>
                                 <span class="px-4 py-2 bg-primary-100 dark:bg-primary-900/30 text-primary-800 dark:text-primary-300 rounded-full text-sm">Arduino</span>
@@ -105,7 +105,7 @@
                             </div>
 
                             <!-- Contact Section -->
-                            <h2 class="text-2xl font-display font-semibold text-gray-900 dark:text-white mb-4">Get in Touch</h2>
+                            <h2 class="text-2xl font-display font-semibold text-gray-900 dark:text-white mb-4">Liên hệ</h2>
                             <p class="text-gray-600 dark:text-gray-400">
                                 Quý khách muốn đặt làm một tác phẩm riêng biệt hoặc cùng hợp tác trong một dự án đầy thú vị? Hãy thoải mái liên hệ với tôi qua bất kỳ kênh mạng xã hội nào hoặc gửi email trực tiếp đến <a href="mailto:iot7pros@gmail.com" class="text-primary-600 dark:text-primary-400 hover:underline">iot7pros@gmail.com</a>. Tôi luôn sẵn lòng đồng hành để biến ý tưởng của bạn thành hiện thực!
                             </p>
