--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects - 3Dpros iOT</title>
+    <title>Art Lamp - 3Dpros iOT</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -61,7 +61,7 @@
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
                 <!-- Grid Item 1 -->
                 <div class="relative group overflow-hidden rounded-lg cursor-pointer">
-                    <img src="images\2022-highlights-Large-uai-864x1080.png" 
+                    <img src="images/art_lamp/art_lamp_blue.jpg" 
                          alt="Project 1" 
                          class="w-full h-[400px] object-cover transition-transform duration-500 group-hover:scale-110">
                     <div class="absolute bottom-0 left-0 right-0 p-4 bg-gradient-to-t from-black/70 to-transparent">
@@ -71,7 +71,7 @@
 
                 <!-- Grid Item 2 -->
                 <div class="relative group overflow-hidden rounded-lg cursor-pointer">
-                    <img src="images\lightbar-header-uai-533x667.png" 
+                    <img src="images/art_lamp/art_lamp_yellow.jpg" 
                          alt="Project 2" 
                          class="w-full h-[400px] object-cover transition-transform duration-500 group-hover:scale-110">
                     <div class="absolute bottom-0 left-0 right-0 p-4 bg-gradient-to-t from-black/70 to-transparent">
@@ -81,7 +81,7 @@
 
                 <!-- Grid Item 3 -->
                 <div class="relative group overflow-hidden rounded-lg cursor-pointer">
-                    <img src="images\IMG_0084-Large-e1695527093883.png" 
+                    <img src="images/art_lamp/art_lamp_blue_on.jpg" 
                          alt="Project 3" 
                          class="w-full h-[400px] object-cover transition-transform duration-500 group-hover:scale-110">
                     <div class="absolute bottom-0 left-0 right-0 p-4 bg-gradient-to-t from-black/70 to-transparent">
@@ -91,7 +91,7 @@
 
                 <!-- Grid Item 4 -->
                 <div class="relative group overflow-hidden rounded-lg cursor-pointer">
-                    <img src="images\IMG_6238-Medium.png" 
+                    <img src="images/art_lamp/art_lamp_yellow_and_light_color_keyboard.jpg" 
                          alt="Project 4" 
                          class="w-full h-[400px] object-cover transition-transform duration-500 group-hover:scale-110">
                     <div class="absolute bottom-0 left-0 right-0 p-4 bg-gradient-to-t from-black/70 to-transparent">
@@ -101,7 +101,7 @@
 
                 <!-- Grid Item 5 -->
                 <div class="relative group overflow-hidden rounded-lg cursor-pointer">
-                    <img src="images\bubbly-5717-.png" 
+                    <img src="images/art_lamp/art_lamp_blue_off.jpg" 
                          alt="Project 5" 
                          class="w-full h-[400px] object-cover transition-transform duration-500 group-hover:scale-110">
                     <div class="absolute bottom-0 left-0 right-0 p-4 bg-gradient-to-t from-black/70 to-transparent">
@@ -111,7 +111,7 @@
 
                 <!-- Grid Item 6 -->
                 <div class="relative group overflow-hidden rounded-lg cursor-pointer">
-                    <img src="images\surya-280-4026-.png" 
+                    <img src="images/art_lamp/art_lamp_creation.jpg" 
                          alt="Project 6" 
                          class="w-full h-[400px] object-cover transition-transform duration-500 group-hover:scale-110">
                     <div class="absolute bottom-0 left-0 right-0 p-4 bg-gradient-to-t from-black/70 to-transparent">
