--- a/sculptures.html
+++ b/sculptures.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sculptures - 3Dpros iOT</title>
+    <title>Gonggi - 3Dpros iOT</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -61,7 +61,7 @@
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
                 <!-- Grid Item 1 -->
                 <div class="relative group overflow-hidden rounded-lg cursor-pointer">
-                    <img src="images\cumin-lander.png"
+                    <img src="images/gonggi/gonggi.jpg"
                          alt="Sculpture 1" 
                          class="w-full h-[400px] object-cover transition-transform duration-500 group-hover:scale-110">
                     <div class="absolute bottom-0 left-0 right-0 p-4 bg-gradient-to-t from-black/70 to-transparent">
@@ -71,7 +71,7 @@
 
                 <!-- Grid Item 2 -->
                 <div class="relative group overflow-hidden rounded-lg cursor-pointer">
-                    <img src="images\IMG_0084-Large-e1695527093883.png"
+                    <img src="images/gonggi/im1.jpg"
                          alt="Sculpture 2" 
                          class="w-full h-[400px] object-cover transition-transform duration-500 group-hover:scale-110">
                     <div class="absolute bottom-0 left-0 right-0 p-4 bg-gradient-to-t from-black/70 to-transparent">
@@ -81,7 +81,7 @@
 
                 <!-- Grid Item 3 -->
                 <div class="relative group overflow-hidden rounded-lg cursor-pointer">
-                    <img src="images\IMG_6238-Medium.png"
+                    <img src="images/gonggi/im2.jpg"
                          alt="Sculpture 3" 
                          class="w-full h-[400px] object-cover transition-transform duration-500 group-hover:scale-110">
                     <div class="absolute bottom-0 left-0 right-0 p-4 bg-gradient-to-t from-black/70 to-transparent">
@@ -91,31 +91,11 @@
 
                 <!-- Grid Item 4 -->
                 <div class="relative group overflow-hidden rounded-lg cursor-pointer">
-                    <img src="images\IMG_4463-Medium-e1695532799616.png"
+                    <img src="images/gonggi/im3.jpg"
                          alt="Sculpture 4" 
                          class="w-full h-[400px] object-cover transition-transform duration-500 group-hover:scale-110">
                     <div class="absolute bottom-0 left-0 right-0 p-4 bg-gradient-to-t from-black/70 to-transparent">
                         <h3 class="text-xl font-display font-semibold text-white">Digital Forest</h3>
-                    </div>
-                </div>
-
-                <!-- Grid Item 5 -->
-                <div class="relative group overflow-hidden rounded-lg cursor-pointer">
-                    <img src="images\bubbly-5717-.png"
-                         alt="Sculpture 5" 
-                         class="w-full h-[400px] object-cover transition-transform duration-500 group-hover:scale-110">
-                    <div class="absolute bottom-0 left-0 right-0 p-4 bg-gradient-to-t from-black/70 to-transparent">
-                        <h3 class="text-xl font-display font-semibold text-white">Cyber Garden</h3>
-                    </div>
-                </div>
-
-                <!-- Grid Item 6 -->
-                <div class="relative group overflow-hidden rounded-lg cursor-pointer">
-                    <img src="images\surya-280-4026-.png"
-                         alt="Sculpture 6" 
-                         class="w-full h-[400px] object-cover transition-transform duration-500 group-hover:scale-110">
-                    <div class="absolute bottom-0 left-0 right-0 p-4 bg-gradient-to-t from-black/70 to-transparent">
-                        <h3 class="text-xl font-display font-semibold text-white">Circuit Symphony</h3>
                     </div>
                 </div>
             </div>
