Reverted changes to .\about.html from commit 6fb4fa81261784e89d35741ae896f66e2bb98988

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
     <!-- Font Awesome CDN for social icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <script>
@@ -42,8 +42,8 @@
                         },
                     },
                     fontFamily: {
-                        'display': ['Playfair Display', 'serif'],
-                        'body': ['Roboto', 'sans-serif'],
+                        'display': ['"Playfair Display"', 'serif'],
+                        'body': ['Inter', 'sans-serif'],
                     },
                 },
             },
@@ -58,7 +58,7 @@
     <main class="w-full py-12 bg-gray-50 dark:bg-gray-900 mt-24">
         <div class="max-w-[1320px] mx-auto px-4 sm:px-6 lg:px-8">
             <div class="max-w-4xl mx-auto">
-                <h1 class="text-4xl md:text-5xl font-display font-bold text-gray-900 dark:text-white mb-12 text-center">Về tôi</h1>
+                <h1 class="text-4xl md:text-5xl font-display font-bold text-gray-900 dark:text-white mb-12 text-center">About Me</h1>
                 
                 <!-- Profile Section -->
                 <div class="flex flex-col md:flex-row gap-12 items-start">
@@ -84,17 +84,17 @@
                     <div class="w-full md:w-2/3">
                         <div class="prose prose-lg dark:prose-invert">
                             <p class="mb-6">
-                                Xin chào, tôi là 3Dpros iOT – người tạo ra những tác phẩm điêu khắc điện tử độc đáo, nơi vẻ đẹp hình thể hòa quyện hoàn hảo với công năng! Các sáng tạo của tôi là sự giao thoa giữa nghệ thuật và công nghệ, biến những mạch điện thành yếu tố thị giác đầy cuốn hút và các linh kiện điện tử thành chất liệu nghệ thuật đỉnh cao.
+                                Hi, I'm 3Dpros iOT. I create sculptural electronic objects that celebrate both form and function. My work explores the intersection of art and technology, where circuits become visual elements and electronic components transform into artistic media.
                             </p>
                             <p class="mb-6">
-                                Mỗi tác phẩm đều được chế tác tỉ mỉ từ thanh đồng thau, linh kiện điện tử và nhiều vật liệu đa dạng, tạo nên những bức điêu khắc mạch điện ba chiều không chỉ hoạt động hoàn hảo mà còn đẹp mắt đến từng chi tiết. Thiết kế để lộ mạch điện giúp quý khách vừa chiêm ngưỡng vẻ đẹp của công nghệ, vừa hiểu rõ cách nó vận hành – một trải nghiệm không thể bỏ lỡ!
+                                Each piece is carefully crafted using brass rods, electronic components, and various materials, creating three-dimensional circuit sculptures that are both functional and aesthetically pleasing. The exposed nature of these circuits allows viewers to appreciate the beauty of electronic design while understanding its functionality.
                             </p>
                             <p class="mb-8">
-                                Khi không đắm chìm trong việc chế tác, tôi luôn thử nghiệm các kỹ thuật mới, tổ chức workshop truyền cảm hứng hoặc hợp tác cùng những nghệ sĩ tài hoa trong cộng đồng nghệ thuật điện tử. Hãy để tôi mang đến cho bạn một hành trình nghệ thuật công nghệ đầy ấn tượng!
+                                When I'm not building sculptures, I'm experimenting with new techniques, teaching workshops, or collaborating with other artists in the electronic art community.
                             </p>
 
                             <!-- Skills Section -->
-                            <h2 class="text-2xl font-display font-semibold text-gray-900 dark:text-white mb-4">Kỹ năng & Chuyên môn</h2>
+                            <h2 class="text-2xl font-display font-semibold text-gray-900 dark:text-white mb-4">Skills & Expertise</h2>
                             <div class="flex flex-wrap gap-3 mb-8">
                                 <span class="px-4 py-2 bg-primary-100 dark:bg-primary-900/30 text-primary-800 dark:text-primary-300 rounded-full text-sm">Circuit Design</span>
                                 <span class="px-4 py-2 bg-primary-100 dark:bg-primary-900/30 text-primary-800 dark:text-primary-300 rounded-full text-sm">Arduino</span>
@@ -105,9 +105,9 @@
                             </div>
 
                             <!-- Contact Section -->
-                            <h2 class="text-2xl font-display font-semibold text-gray-900 dark:text-white mb-4">Liên hệ</h2>
+                            <h2 class="text-2xl font-display font-semibold text-gray-900 dark:text-white mb-4">Get in Touch</h2>
                             <p class="text-gray-600 dark:text-gray-400">
-                                Quý khách muốn đặt làm một tác phẩm riêng biệt hoặc cùng hợp tác trong một dự án đầy thú vị? Hãy thoải mái liên hệ với tôi qua bất kỳ kênh mạng xã hội nào hoặc gửi email trực tiếp đến <a href="mailto:iot7pros@gmail.com" class="text-primary-600 dark:text-primary-400 hover:underline">iot7pros@gmail.com</a>. Tôi luôn sẵn lòng đồng hành để biến ý tưởng của bạn thành hiện thực!
+                                Interested in commissioning a piece or collaborating on a project? Feel free to reach out through any of my social media channels or send me an email at <a href="mailto:iot7pros@gmail.com" class="text-primary-600 dark:text-primary-400 hover:underline">iot7pros@gmail.com</a>.
                             </p>
                         </div>
                     </div>
