added the 3D.svg icon as a favicon to all your HTML pages

--- a/lamp.html
+++ b/lamp.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Art Lamp - 3Dpros iOT</title>
+    <title>3Dpros iOT - Art Lamp</title>
+    <link rel="icon" type="image/svg+xml" href="images/3D.svg">
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
