--- a/sculptures.html
+++ b/sculptures.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gonggi - 3Dpros iOT</title>
+    <title>3Dpros iOT - Gonggi</title>
+    <link rel="icon" type="image/svg+xml" href="images/3D.svg">
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
