update shopee and tiktok link social reference

--- a/about.html
+++ b/about.html
@@ -71,10 +71,10 @@
                             </div>
                             <!-- Social Links -->
                             <div class="flex justify-center space-x-6 mt-6">
-                                <a href="#" class="text-gray-600 dark:text-gray-400 hover:text-primary-600 dark:hover:text-primary-400 transition-colors">
+                                <a href="https://shopee.vn/shop/77613227" class="text-gray-600 dark:text-gray-400 hover:text-primary-600 dark:hover:text-primary-400 transition-colors">
                                     <img src="images/shopee.svg" alt="shopee" class="w-7 h-7">
                                 </a>
-                                <a href="#" class="text-gray-600 dark:text-gray-400 hover:text-primary-600 dark:hover:text-primary-400 transition-colors">
+                                <a href="https://www.tiktok.com/@3dpros3" class="text-gray-600 dark:text-gray-400 hover:text-primary-600 dark:hover:text-primary-400 transition-colors">
                                     <img src="images/tiktok.svg" alt="tiktok" class="w-7 h-7">
                                 </a>
                             </div>
